# vk-rs

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: shader.frag  shader.vert
src/: main.rs  vk_rs_app.rs
src/renderer/: mod.rs  model.rs
src/vk_rs_app/: app.rs  mod.rs  queue_family_indices.rs  swapchain_support_details.rs  tools.rs  types.rs  vertex.rs
