[package]
name = "vk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.10.0"
raw-window-handle = "0.3.4"
num = "0.4.0"
